# myles_morales

./: .gitignore  CLAUDE.md  README.md  comapnies_2.txt  company.txt  config.json  pyproject.toml
app/: Modelfile  ProwlerModelfile  api.py  bulk_contact_finder.py  companies.txt  config.json  config_manager.py  contact_evaluator.py  contact_finder.py  evaluator_factory.py  main.py  miles_prompt_template.txt  miles_system_prompt.txt  model_factory.py  model_manager.py  openai_evaluator.py  openai_model_manager.py  prowler_config.json  prowler_evaluator.py  prowler_prompt_template.txt  prowler_system_prompt.txt  selenium_scraper.py  web_scraper.py
contact_search_results/: bulk_search_contact_details_evaluated_20250407_153114.csv  bulk_search_contact_details_evaluated_20250407_153114.json  bulk_search_contact_details_evaluated_20250407_164605.csv  bulk_search_contact_details_evaluated_20250407_164605.json  bulk_search_contact_details_evaluated_20250408_171737.csv  bulk_search_contact_details_evaluated_20250408_171737.json  bulk_search_email_addresses_evaluated_20250408_142755.csv  bulk_search_email_addresses_evaluated_20250408_142755.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: BotAvatar.css  BotAvatar.js  ChatContainer.css  ChatContainer.js  GLoader.css  GLoader.js  MessageBubble.css  MessageBubble.js  Sidebar.css  Sidebar.js
frontend/src/services/: api.js
uploads/: comapnies_3.txt
